--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,14 +1,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.mackentoch.beaconsandroid">
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_REMOTE_MESSAGING" />
 
     <application>
-        <service android:name="com.mackentoch.beaconsandroid.BeaconsAndroidTransitionService"/>
+        <service
+            android:name="com.mackentoch.beaconsandroid.BeaconsAndroidTransitionService"
+            android:foregroundServiceType="remoteMessaging"
+            android:exported="false" />
 
         <receiver android:name="com.mackentoch.beaconsandroid.BeaconsAndroidBootReceiver" android:exported="true">
 			<intent-filter>
