update to use FOREGROUND_SERVICE_REMOTE_MESSAGING

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -8,12 +8,12 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_REMOTE_MESSAGING" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
 
     <application>
         <service
             android:name="com.mackentoch.beaconsandroid.BeaconsAndroidTransitionService"
-            android:foregroundServiceType="remoteMessaging"
+            android:foregroundServiceType="location"
             android:exported="false" />
 
         <receiver android:name="com.mackentoch.beaconsandroid.BeaconsAndroidBootReceiver" android:exported="true">
